# game.libretro.bsnes-mercury-balanced

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/bsnes-mercury/: CMakeLists.txt  bsnes-mercury.txt
depends/common/bsnes-mercury-balanced/: CMakeLists.txt  bsnes-mercury-balanced.txt
game.libretro.bsnes-mercury/: addon.xml
game.libretro.bsnes-mercury-balanced/: addon.xml  addon.xml.in
game.libretro.bsnes-mercury-balanced/resources/: settings.xml
game.libretro.bsnes-mercury-balanced/resources/language/English/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.af_za/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.am_et/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.ar_dz/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.ar_sa/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.ast_es/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.az_az/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.be_by/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.bg_bg/: strings.po
game.libretro.bsnes-mercury-balanced/resources/language/resource.language.bs_ba/: strings.po
game.libretro.bsnes-mercury/resources/: settings.xml
(+82 files in other folders)
